# WittleWorkshop

./: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  wittle_workshop.code-workspace
.devcontainer/: Dockerfile  devcontainer.json
api/: Cargo.toml  Dockerfile
api/src/: commands.rs  main.rs  models.rs  routes.rs  services.rs
api/src/commands/: docker_commands.rs
api/src/models/: api_bodies.rs  errors.rs
api/src/routes/: container_routes.rs  docker_routes.rs  service_routes.rs
api/src/services/: docker_service.rs
api/tests/: database_test.rs
client/: index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  Docker.tsx  Home.module.css  Home.tsx  Navbar.tsx  Services.tsx  apirequests.ts  appsettings.ts  index.css  index.tsx  navbar.css
client/test/: apirequests.test.ts
database/functions/: InsertIntoTest.sql
database/tables/: Test.sql
public/js/: test.js
public/style/: core.css  docker_container_view.css  header.css  index.css
setup/: docker-compose.yaml
src/: lib.rs  main.rs  models.rs  routes.rs
src/models/: api_bodies.rs
src/routes/: docker_routes.rs  html_routes.rs  route_catchers.rs  service_routes.rs
style/: index.css
templates/: base.html  docker.html  home.html  index.html  plans.html
templates/components/: DockerContainerView.html  header.html
wittle_workshop_api/: Cargo.toml
wittle_workshop_api/src/: main.rs  models.rs  routes.rs
wittle_workshop_api/src/commands/: docker_commands.rs
wittle_workshop_api/tests/: test.rs
wittle_workshop_site/: app.js  index.html
(+5 files in other folders)
