[package]
name = "wittle_workshop_api"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0
codegen-units = 16
incremental = true
lto = false

[profile.release]
opt-level = 3
codegen-units = 1
incremental = false
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
regex = "1.10.4"
reqwest = { version = "0.12.2" }
rocket = { version = "0.5.0", features = ["json"] }
serde = { version = "1.0.196", features = ["derive"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres" ] }
serde_json = "1.0"
thiserror = "1.0.58"
tera = "1.20.0"
dockworker = "0.5.1"
